# cohort_processor

./: .gitignore  LICENSE  README.md  cohort_processor.py  config.py  non-non-nons.py  prop36denied.py  pyproject.toml  sample.py  test.py  test.xlsx  utils.py
cohort_processor/: __init__.py  cohort_processor.py  impl.py  non_non_nons.py  prop36denied.py
cohort_processor/output/: output.xlsx
